[package]
name = "rust-tensors"
version = "0.1.7"
edition = "2021"
authors = ["Ethan Stewart <daedelusstormbow@gmail.com>"]
license = "MIT"
description = "A library to use n-dimensional arrays."
repository = "https://github.com/Daedelus1/RustTensors"
readme = "README.md"
exclude = [
    "proptest-regressions/*",
    "target/*",
    ".idea/*"
]

[dev-dependencies]
proptest = "1.6.0"
